fixed spacing text issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3915,7 +3915,7 @@ input, select, textarea {
 	#footer div.codewars-api .completed-challenge {
 		font-size: 1.8em;
 		font-weight: 800;
-		
+		color: #ce5e5e;
 	}
 	
 	#footer .codewars-row3 {
